# IO-node

./: .gitignore  CMakeLists.txt  README.md  prj.conf
src/: main.c
src/DO/: DO.c  DO.h
src/common/: variables.c  variables.h
src/dts/: stm32h723zg_ds18b20.overlay
src/network/: config.h  general.c  general.h  mqtt_client.c  mqtt_client.h  mqtt_handlers.c
src/sensors/: ds18b20.c  ds18b20.h
test/mqtt_broker/: docker-compose.yml
test/mqtt_broker/mosquitto/config/: mosquitto.conf
test/mqtt_broker/mosquitto/data/: mosquitto.db
